# ec2-gha

./: CLAUDE.md  README.md  action.yml  pyproject.toml
.github/test-scripts/: gpu-benchmark.py
.github/workflows/: README.md  demo-00-minimal.yml  demo-archs.yml  demo-cpu-sweep.yml  demo-dbg-minimal.yml  demo-gpu-dbg.yml  demo-gpu-job-seq.yml  demo-gpu-minimal.yml  demo-gpu-sweep.yml  demo-gpu.yml  demo-instances-mtx.yml  demo-job-seq.yml  demo-jobs-split.yml  demo-matrix-wide.yml  demo-multi-instance.yml  demo-multi-job.yml  demo-multi-runner.yml  demo-runners-mtx.yml  demos.yml  runner.yml  test-disk-full.yml
scripts/: instance-runtime.py
src/ec2_gha/: __main__.py  defaults.py  log_constants.py  start.py
src/ec2_gha/scripts/: check-runner-termination.sh  job-completed-hook.sh  job-started-hook.sh  runner-setup.sh
src/ec2_gha/templates/: shared-functions.sh  shared-functions.sh.templ  user-script-compact.sh.templ  user-script.sh.templ
src/start_aws_gha_runner/: start.py
src/start_aws_gha_runner/templates/: user-script.sh.templ
tests/: test_start.py
tests/__snapshots__/: test_start.ambr
